Add styles for starred messages flexpane timestamps

--- a/scss/styles.scss
+++ b/scss/styles.scss
@@ -44,6 +44,7 @@
 @import "modules/flexpane/reactions";
 @import "modules/flexpane/search";
 @import "modules/flexpane/shortcuts";
+@import "modules/flexpane/starred";
 @import "modules/flexpane/team";
 @import "modules/flexpane/threads";
 @import "modules/flexpane/whats-new";
