Partial Slack kit support (fixes #134)

--- a/scss/modules/inputs/_messaging.scss
+++ b/scss/modules/inputs/_messaging.scss
@@ -172,6 +172,25 @@
   }
 }
 
+.c-message {
+  &__editor {
+    &__input {
+      background: $color-shade-light;
+      border-color: $color-shade-dark;
+      color: $base-font-color;
+
+      &.focus {
+        border-color: $color-shade-dark;
+        box-shadow: 0 0 7px $color-shadow-light;
+      }
+    }
+
+    &__warning {
+      color: $color-red;
+    }
+  }
+}
+
 #message_edit_container .message_input {
   background: $color-shade-light;
   border-color: $color-shade-dark;
