--- a/scss/modules/messaging/_light.scss
+++ b/scss/modules/messaging/_light.scss
@@ -1,3 +1,15 @@
+.c-message--light {
+  @if global-variable-exists(base-font-family) {
+    font-family: $base-font-family;
+  }
+
+  .c-message {
+    &__sender .c-message__sender_link {
+      color: $base-font-color;
+    }
+  }
+}
+
 .light_theme {
   ts-message {
     color: $base-font-color;
