--- a/css/raw/variants/aubergine-monospaced.css
+++ b/css/raw/variants/aubergine-monospaced.css
@@ -380,6 +380,12 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 
 .inline_message_input_container .ql-container.focus, .inline_message_input_container .ql-container:active, .inline_message_input_container .ql-container:hover { border-color: #876484; }
 
+.c-message__editor__input { background: #61485e; border-color: #4d394b; color: #f0d9ed; }
+
+.c-message__editor__input.focus { border-color: #4d394b; box-shadow: 0 0 7px rgba(0, 0, 0, 0.15); }
+
+.c-message__editor__warning { color: #bf360c; }
+
 #message_edit_container .message_input { background: #61485e; border-color: #4d394b; color: #f0d9ed; }
 
 #message_edit_container .message_input.focus { border-color: #4d394b; box-shadow: 0 0 7px rgba(0, 0, 0, 0.15); }
@@ -738,6 +744,12 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 
 #edit_topic_trigger { color: #a3839f; }
 
+.c-message_list__day_divider__label { color: #a3839f; }
+
+.c-message_list__day_divider__label__pill { background: #3e313c; position: relative; }
+
+.c-message_list__day_divider__line { border-top-color: #4d394b; }
+
 .day_divider, .mention_day_container_div .day_divider { background: #3e313c; color: #a3839f; }
 
 .day_divider hr, .mention_day_container_div .day_divider hr { border-bottom: 0; border-top: 1px solid #4d394b; }
@@ -779,6 +791,120 @@ input[disabled], input[readonly], textarea[disabled], textarea[readonly] { backg
 #msgs_overlay_div { background: #3e313c; }
 
 #col_messages { box-shadow: inset 1px 0 0 0 #3e313c; }
+
+.c-message:hover .c-message__broadcast_preamble_outer, .c-message:hover .c-message__broadcast_preamble { color: #a3839f; }
+
+.c-message--hover .c-message__broadcast_preamble_outer .c-message--focus .c-message__broadcast_preamble_outer, .c-message--hover .c-message__broadcast_preamble_outer .c-message--focus .c-message__broadcast_preamble, .c-message--hover .c-message__broadcast_preamble .c-message--focus .c-message__broadcast_preamble_outer, .c-message--hover .c-message__broadcast_preamble .c-message--focus .c-message__broadcast_preamble { color: #a3839f; }
+
+.c-message:hover:not(.c-message--highlight):not(.c-message--standalone):not(.c-message--pinned):not(.c-message--ephemeral):not(.c-message--custom_response):not(.c-message--starred):not(.c-message--sli_highlight), .c-message--hover:not(.c-message--highlight):not(.c-message--standalone):not(.c-message--pinned):not(.c-message--ephemeral):not(.c-message--custom_response):not(.c-message--starred):not(.c-message--sli_highlight), .c-message--focus:not(.c-message--highlight):not(.c-message--standalone):not(.c-message--pinned):not(.c-message--ephemeral):not(.c-message--custom_response):not(.c-message--starred):not(.c-message--sli_highlight) { background: rgba(55, 44, 54, 0.1); }
+
+.c-message:hover .c-message__body--automated, .c-message--hover .c-message__body--automated .c-message--focus .c-message__body--automated { color: #a3839f; }
+
+.c-message:hover .c-message__file_meta, .c-message--hover .c-message__file_meta .c-message--focus .c-message__file_meta { color: #a3839f; }
+
+.c-message--focus:not(.c-message--highlight):not(.c-message--standalone):not(.c-message--pinned):not(.c-message--ephemeral):not(.c-message--custom_response):not(.c-message--starred):not(.c-message--sli_highlight) { background: rgba(55, 44, 54, 0.1); }
+
+.c-message--pinned, .c-message--sli_highlight:not(.c-message--sli_highlight_negative), .c-message--starred { background: rgba(55, 44, 54, 0.2); }
+
+.c-message--custom_response { background: rgba(55, 44, 54, 0.15); }
+
+.c-message--sli_highlight_negative, .c-message--ephemeral { background: rgba(55, 44, 54, 0.1); }
+
+.c-message--pinned .c-message__label__icon { color: #bf360c; }
+
+.c-message--custom_response .c-message__label__icon, .c-message--sli_highlight .c-message__label__icon { color: #f0d9ed; }
+
+.c-message--sli_highlight .c-message__label .c-mrkdwn__member--link, .c-message--sli_highlight .c-message__label .c-mrkdwn__channel.internal_channel_link { color: #a3839f; }
+
+.c-message--sli_highlight_negative .c-message__label { background: rgba(55, 44, 54, 0.1); }
+
+.c-message--resend .c-message__body { color: #a3839f; }
+
+.c-message--deleting { background: rgba(191, 54, 12, 0.6); }
+
+.c-message--standalone { border-color: rgba(97, 72, 94, 0.1); }
+
+.c-message--unprocessed .c-message__body { animation: to-grey 50ms linear 10s forwards; }
+
+.c-message__broadcast_preamble_outer, .c-message__broadcast_preamble { color: #a3839f; }
+
+.c-message__sender { color: #f0d9ed; }
+
+.c-message__sender a { color: #f0d9ed; }
+
+.c-message__sender .c-emoji__text_mode_icon { color: #a3839f; }
+
+.c-message__body { color: #f0d9ed; }
+
+.c-message__body--unknown { background: rgba(97, 72, 94, 0.1); }
+
+.c-message__body--automated { color: #a3839f; }
+
+.c-message__body--tombstone { color: #a3839f; }
+
+.c-message__label { color: #a3839f; }
+
+.c-message__label__highlight_title { color: #f0d9ed; }
+
+.c-message__label__highlight_positive, .c-message__label__highlight_negative { color: #a3839f; }
+
+.c-message__label__highlight_positive--active, .c-message__label__highlight_negative--active { color: #f0d9ed; }
+
+.c-message__resend_controls { color: #a3839f; }
+
+.c-message__resend_column { background-color: rgba(97, 72, 94, 0.1); }
+
+.c-message__resend, .c-message__cancel { color: #f0d9ed; }
+
+.c-message__edited_label { color: #a3839f; }
+
+.c-message__tombstone_icon { background: rgba(97, 72, 94, 0.1); color: #a3839f; }
+
+.c-message__bot_label { background: rgba(97, 72, 94, 0.1); color: #a3839f; }
+
+.c-message__comment:before { color: #a3839f; }
+
+.c-message__call_attachment { background: #3e313c; border-color: rgba(97, 72, 94, 0.1); }
+
+.c-message__call_icon { color: #f0d9ed; }
+
+.c-message__call--ended .c-message__call_icon { color: #a3839f; }
+
+.c-message__call_info { color: #f0d9ed; }
+
+.c-message__call_name--linked { color: #f0d9ed; }
+
+.c-message__call_name + .c-message__call_description::before { color: #a3839f; }
+
+.c-message__call_sub { color: #a3839f; }
+
+.c-message_actions__container { background: #3e313c; border-color: #4d394b; }
+
+.c-message_actions__container:hover { border-color: #61485e; box-shadow: 0 1px 1px rgba(0, 0, 0, 0.25); }
+
+.c-message_actions__button { border-right-color: #4d394b; color: #a3839f; }
+
+.c-message_actions__button:hover { color: #f0d9ed; }
+
+.c-message_actions__button:active { background: #4d394b; }
+
+.c-message_group { background-color: #3e313c; border-color: #4d394b; }
+
+.c-message_group:hover .c-message_group__header { color: #a3839f; }
+
+.c-message_group__header { color: #f0d9ed; }
+
+.c-message_group__divider_text { background-color: #3e313c; color: #f0d9ed; }
+
+.c-message_list__unread_divider__separator { border-color: #61485e; }
+
+.c-message_list__unread_divider__label { background: #3e313c; box-shadow: 0 0 2px rgba(0, 0, 0, 0.25); color: #61485e; }
+
+.c-message_list__spinner { color: #a3839f; }
+
+.c-message_list .c-scrollbar__bar { background: #4a3b49; }
+
+.c-virtual_list__item--focus:focus .c-message_list__focus_indicator { box-shadow: inset 0 0 0 3px rgba(135, 100, 132, 0.8); }
 
 ts-message { color: #f0d9ed; }
 
@@ -944,6 +1070,71 @@ ts-mention { background: rgba(135, 100, 132, 0.1) !important; color: #f0d9ed !im
 
 .bot_label { background: #372c36; color: #a3839f; }
 
+@keyframes to-grey { 0% { color: inherit; }
+  100% { color: #a3839f; } }
+
+@keyframes fade-background-highlight { 0% { background: #61485e; }
+  100% { background: transparent; } }
+
+@keyframes border_focus_animation { 0% { box-shadow: 0 0 4px 0.25px #61485e, 0 0 0 0.5px #876484; }
+  100% { box-shadow: 0 0 4px 0 #61485e, 0 0 0 0 #876484; } }
+
+.c-message_attachment { color: #f0d9ed; }
+
+.c-message_attachment__border { background-color: #61485e; }
+
+.c-message_attachment__delete { color: #a3839f; }
+
+.c-message_attachment__delete:hover { color: #d4bbd1; }
+
+.c-message_attachment__pretext { color: #f0d9ed; }
+
+.c-message_attachment__part + .c-message_attachment__part::before { color: #61485e; }
+
+.c-message_attachment__author .c-message_attachment__autor--distinct { color: #a3839f; }
+
+.c-message_attachment__author_link + .c-message_attachment__author_link { color: #a3839f; }
+
+.c-message_attachment__title_link span { color: #f0d9ed; }
+
+.c-message_attachment__text_expander { color: #a3839f; }
+
+.c-message_attachment__footer { color: #a3839f; }
+
+.c-message_attachment__image, .c-message_attachment__thumb, .c-message_attachment__video_thumb { box-shadow: 0 0 0 1px rgba(55, 44, 54, 0.1) inset; }
+
+.c-message_attachment__video_html { background-color: rgba(62, 49, 60, 0.4); }
+
+.c-message_attachment__video_buttons { background: rgba(55, 44, 54, 0.4); }
+
+.c-message_attachment__video_link:visited, .c-message_attachment__video_link:link { color: #f0d9ed; }
+
+.c-message_attachment__video_play, .c-message_attachment__video_link { color: #f0d9ed; text-shadow: 0 1px 1px rgba(55, 44, 54, 0.5); }
+
+.c-message_attachment__video_play:hover, .c-message_attachment__video_link:hover { color: #f0d9ed; }
+
+.c-message_attachment__media_trigger .c-expandable_trigger { color: #a3839f; }
+
+.c-message_attachment__media_trigger--too_large { color: #a3839f; }
+
+.c-message_attachment__select { border-color: #372c36; }
+
+.c-message_attachment__select:hover, .c-message_attachment__select:active { border-color: #61485e; }
+
+.c-message__reply_bar:hover, .c-message__reply_bar--focus { background-color: #3e313c; border-color: #372c36; }
+
+.c-message__reply_bar:hover .c-message__reply_bar_arrow, .c-message__reply_bar--focus .c-message__reply_bar_arrow { color: #a3839f; }
+
+.c-message__reply_bar:hover .c-message__reply_bar_view_thread, .c-message__reply_bar--focus .c-message__reply_bar_view_thread { background-color: #61485e; }
+
+.c-message__reply_bar_description { color: #a3839f; }
+
+.c-message__file_meta { color: #a3839f; }
+
+.c-message__image_container { background: rgba(55, 44, 54, 0.1); }
+
+.c-message__image_wrapper:after { border-color: transparent; }
+
 .attachment_group.has_container { background: #3e313c; border: 1px solid #4d394b; }
 
 .attachment_group.has_container .inline_attachment::after { background-color: #4d394b; }
@@ -1093,6 +1284,12 @@ ts-message .reply_bar .reply_bar_caret, ts-message .reply_bar .view_conv_hover, 
 ts-message .reply_bar:hover { background: #3e313c; border-color: #372c36; }
 
 .inline_color_block { border-color: #61485e; }
+
+.p-message_pane .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider:before { background: #3e313c; border-bottom: 1px solid #3e313c; }
+
+.p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list:not(.c-virtual_list--scrollbar):before, .p-message_pane .p-message_pane__top_banners:not(:empty) + div .c-message_list.c-virtual_list--scrollbar > .c-scrollbar__hider:before { box-shadow: 0 32px #3e313c; }
+
+.p-message_pane__unread_banner__banner { background: #61485e; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
 
 .messages_banner { color: #f0d9ed; text-shadow: 0 1px rgba(0, 0, 0, 0.15); }
 
@@ -1266,11 +1463,21 @@ div.CodeMirror span.CodeMirror-nonmatchingbracket { color: #bf360c; }
 
 .sssh-link { color: #a3839f; }
 
+.c-message--dense { font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; }
+
+.c-message--dense .c-timestamp__label { color: #a3839f; }
+
+.c-message--dense .c-message__content_header .c-custom_status { border-color: #4d394b; }
+
 .dense_theme ts-message { color: #f0d9ed; font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; }
 
 .dense_theme ts-message.first .message_gutter .timestamp, .dense_theme ts-message.selected .message_gutter .timestamp { color: #a3839f; }
 
 .dense_theme ts-message .message_content .message_current_status { border-color: #4d394b; }
+
+.c-message--light { font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; }
+
+.c-message--light .c-message__sender .c-message__sender_link { color: #f0d9ed; }
 
 .light_theme ts-message { color: #f0d9ed; font-family: Consolas, "Andale Mono WT", "Andale Mono", "Lucida Console", "Lucida Sans Typewriter", "DejaVu Sans Mono", "Bitstream Vera Sans Mono", "Liberation Mono", "Nimbus Mono L", Monaco, "Courier New", Courier, monospace; }
 
